v138.0.1 Severely Broken - Can't view any message - if anything in profile was using UNC path
Categories
(Thunderbird :: General, defect, P1)
Tracking
(thunderbird_esr128 fixed, thunderbird138 fixed, thunderbird139 fixed)
People
(Reporter: shinyairplane, Assigned: mkmelin, NeedInfo)
References
Details
(Keywords: regression, Whiteboard: [regression v138.0.1][regression v128.10.1])
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
corey
:
approval-comm-beta+
corey
:
approval-comm-release+
corey
:
approval-comm-esr128+
|
Details | Review |
Steps to reproduce:
Ppgrade from v136.0 or v138.0 to v138.0.1 (on two separate machines).
Actual results:
It is impossible to view any message in Thunderbird in v138.0.1.
Expected results:
Should have offered upgrade or downgrade. Troubleshoot Mode did not fix the problem.
| Reporter | ||
Comment 1•1 year ago
|
||
Workaround:
- Open Thunderbird.
- Go to Settings.
- Disable automatic updates by selecting, "Check for updates, but let me choose whether to install them".
- Close Thunderbird.
- Download "Thunderbird Setup 138.0.exe" from https://download.mozilla.org/?product=thunderbird-138.0-SSL&os=win64&lang=en-US
- Install v138.0 over v138.0.1.
- Open Thunderbird.
Problem solved for now.
| Assignee | ||
Comment 2•1 year ago
|
||
I don't know what would have caused that.
We'd need to see at least errors from the Error Console (Ctrl+Shift+J)
| Reporter | ||
Comment 3•1 year ago
|
||
Steps to reproduce this bug after the downgrade:
- Open Thunderbird.
- Upgrade from v138.0 to v138.0.1 via the Help > About dialog.
- Restart Thunderbird and appropriate user profile.
- Press Ctrl+Shift+J
- Click on any message in any folder.
Actual results:
It is impossible to view any message in v138.0.1. The Error Console displays the following exception:
Uncaught NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgMessageService.loadMessage]
displayMessage chrome://messenger/content/aboutMessage.js:393
displayMessage chrome://messenger/content/message-pane.mjs:359
_onSelect chrome://messenger/content/about3Pane.js:4668
handleEvent chrome://messenger/content/about3Pane.js:4459
onSelectionChanged chrome://messenger/content/tree-view.mjs:1703
_selectSingle chrome://messenger/content/tree-view.mjs:1505
handleEvent chrome://messenger/content/tree-view.mjs:422
aboutMessage.js:393
PLEASE REOPEN THIS BUG AND SET SEVERITY
| Reporter | ||
Updated•1 year ago
|
| Assignee | ||
Comment 5•1 year ago
|
||
What is the exact path to your mails?
| Assignee | ||
Comment 6•1 year ago
|
||
(In reply to Hartmut Welpmann [:welpy-cw] from comment #4)
Regression from Bug 1958580?
But no, that's not on 138 yet.
Comment 7•1 year ago
|
||
(In reply to Magnus Melin [:mkmelin] from comment #6)
(In reply to Hartmut Welpmann [:welpy-cw] from comment #4)
Regression from Bug 1958580?
But no, that's not on 138 yet.
I found https://hg-edge.mozilla.org/releases/comm-release/rev/68f06fca9d9dcba146b4f6eb45144de8885805e9.
| Reporter | ||
Comment 8•1 year ago
|
||
File path to the profile? It's UNC yes. According to About Profiles it's not even on the FQDN, just \server\share\folder
| Reporter | ||
Comment 9•1 year ago
|
||
FYI the UNC syntax is set by Thunderbird when creating a profile on a redirected folder in Windows. i.e. My Documents is not located on a local drive. So, this is not something set by the user. I could attempt a workaround with a mapped drive letter, but that might imply Thunderbird is dropping support for Windows folder redirection.
| Reporter | ||
Comment 10•1 year ago
|
||
Just brainstorming here but if you're going to "disallow UNC access" that's a substantial feature change and it requires more than a white screen of death for the inbox.
| Assignee | ||
Updated•1 year ago
|
Comment 11•1 year ago
|
||
Any chance this is fixed by bug 1964145? We might be able to release a 138.0.2 if needed.
| Assignee | ||
Comment 12•1 year ago
|
||
No that would not affect it.
Robert: can you provide the path to the folder? Send me an email if you don't want to have it in the bug (mkmelin at thunderbird.net)
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 13•1 year ago
|
||
Allow UNC paths, but if remote, don't. So check for dot (domain, or ipv4), ":" (ipv6) or % (somehing escaped...)
| Reporter | ||
Comment 14•1 year ago
|
||
Windows folder redirection likely allows and encourages full domain names. Would you like me to check?
| Assignee | ||
Comment 15•1 year ago
|
||
It does but that can't be allowed.
| Reporter | ||
Comment 16•1 year ago
|
||
I understand. If you think all or nothing is better and keep the UNC block, I would also understand some kind of informative feedback in the profile manager and the Inbox.
Comment 17•1 year ago
|
||
I've got some questions.
I'd assume a lot of people in corporate or institutional settings would have a shared home directory (i.e /Users/Bob/Apps/...whatever it is on windows...). These would be "remote" hosts, right?
Do these always show up as as UNC paths, or would shared drives be more likely? ("Z:", say)?
(Sheesh. Shows how long it's been since I used windows file-sharing!)
I'd guess we'd want to support profile dirs on remote hosts, right?
But supporting "mailbox://" urls which hit arbitrary servers would not be good.
| Assignee | ||
Comment 18•1 year ago
|
||
Agreed In corporate environments it's common to have the user drive (really) mapped somewhere else, but I think those would be mapped to a drive so you can set it all up when you log on. Mapped drives would show as "normal" local file paths.
I'd guess we'd want to support profile dirs on remote hosts, right?
Yes, though I do think it needs to be a mapped drive, or then you'd have to whitelist it. I don't see any other way to fix it.
But supporting "mailbox://" urls which hit arbitrary servers would not be good.
Right, we fixed that, which caused this bug.
Comment 19•1 year ago
|
||
"In my environment, I confirmed that the same issue occurred after updating Thunderbird from version 128.10.0 to 128.10.1."
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Comment 20•1 year ago
|
||
Might be more common on non-Windows computers? Like mac?
| Assignee | ||
Comment 21•1 year ago
|
||
On unixy systems I'd assume you really just mount the path internally and don't use them directly too much.
| Reporter | ||
Comment 22•1 year ago
|
||
Maybe I'm over-thinking this but why isn't it a simple matter of matching the profile path? Then you wouldn't have to block anything.
Comment 23•1 year ago
•
|
||
(In reply to Robert Chapin from comment #22)
Maybe I'm over-thinking this but why isn't it a simple matter of matching the profile path? Then you wouldn't have to block anything.
I think I agree: The core intention here is really to confine mailbox URLs to only see files within that profile, right?
I'd suspect matching arbitrary paths isn't entirely trivial - you have to normalise the paths first (ie "foo/../bar/..." -> "bar/...") and handle percent-encoding and various other things - but I know it can be done.
That'd seem to be the "right" solution.
(ultimately, I think we need to kill off using raw paths in mailbox URLs entirely - it just seems like asking for trouble. mailbox URLS should just be of the form: mailbox:{server}/{folder}/msgKey. But that's a bigger issue :- ).
(In reply to Magnus Melin [:mkmelin] from comment #18)
Agreed In corporate environments it's common to have the user drive (really) mapped somewhere else, but I think those would be mapped to a drive so you can set it all up when you log on. Mapped drives would show as "normal" local file paths.
I dunno... from a quick web search on "windows folder redirection" it kind of sounds like that's the way admin policy is supposed to be handled on windows these days... (I'm a bit out of touch with this stuff). And Folder Redirection shows up to us as UNC paths, so we need to support them robustly.
Comment 24•1 year ago
|
||
Early reports via support:
| Reporter | ||
Comment 25•1 year ago
|
||
I did some more testing and would like to point out two things:
Microsoft requires UNC paths for folder redirection. Let's not confuse that with user homes.
"The path must be in the form \server\share\FolderName."
I was able to manually change the user folder Location settings to a mapped drive letter path in my Windows profile. While every program I use, except Thunderbird, supports UNC paths, I discovered my version of Acrobat fails to install if any user folder points to a mapped drive letter. It simply throws an invalid drive error and then dumps to the installation aborted page of the wizard.
So as a user, if Thunderbird goes the direction of blocking UNC paths forever, I will have to set up a drive letter dedicated to my Thunderbird profile.
Comment 27•1 year ago
|
||
A notation in 128.10.1 and 138.0.1 release notes for this known issue would probably be a good idea.
Not an overwhelming number of user reports, but I estimate only 10% of users are on an affected release, so can expect many more reports. Can we ship something quick, like 1-2 days to help users safely use networked resources, and then in follow up bugs add as much accommodation as possible for reasonable use cases, as quickly as possible?
Comment 28•1 year ago
|
||
Not an overwhelming number of user reports, but I estimate only 10% of users are on an affected release, so can expect many more reports. Can >we ship something quick, like 1-2 days to help users safely use networked resources, and then in follow up bugs add as much accommodation as >possible for reasonable use cases, as quickly as possible?
I am writing from a corporate environment where we are currently experiencing significant issues related to this problem.
If at all possible, I would also like to request your urgent attention and support on this matter.
A notation in 128.10.1 and 138.0.1 release notes for this known issue would probably be a good idea.
Additionally, as you mentioned:
It may be helpful to include this known issue in the release notes for versions 128.10.1 and 138.0.1.
I agree, and I would like to add that the Thunderbird release notes page currently does not list version 128. I hope this can be addressed as well, so users relying on the ESR version can stay properly informed.
| Assignee | ||
Comment 29•1 year ago
|
||
(In reply to Robert Chapin from comment #22)
Maybe I'm over-thinking this but why isn't it a simple matter of matching the profile path? Then you wouldn't have to block anything.
It's a good idea! But, there's always a but, individual servers may also have their location somewhere else...
Updated•1 year ago
|
| Assignee | ||
Comment 30•1 year ago
|
||
Updated patch under review now. It would always allow access for paths under the profile.
I'm curious though for people affected by this: if you put the profile under UNC - do you only use that for an environment with stationary desktops and very stable network? How would (does it?) work if you have a laptop and try starting Thunderbird when away, or on flaky connection?
Comment 32•1 year ago
|
||
(In reply to Magnus Melin [:mkmelin] from comment #29)
(In reply to Robert Chapin from comment #22)
Maybe I'm over-thinking this but why isn't it a simple matter of matching the profile path? Then you wouldn't have to block anything.
It's a good idea! But, there's always a but, individual servers may also have their location somewhere else...
But I think that's OK: a deliberate choice has already been made - either by the user or the machine admin - to locate the profile remotely.
So as long as the mailbox url is within that path, it should be allowed.
(Just as a breadcrumb for myself, in case we need to do some more robust UNC parsing, there's a ABNF syntax here: https://learn.microsoft.com/en-us/openspecs/windows_protocols/ms-dtyp/62e862f4-2a51-452e-8eeb-dc4ff5ee33cc )
| Assignee | ||
Updated•1 year ago
|
Comment 33•1 year ago
|
||
Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/a9e5cb44e92e
Block only remote UNC mailbox access outside the profile. r=BenC
| Reporter | ||
Comment 34•1 year ago
|
||
(In reply to Magnus Melin [:mkmelin] from comment #30)
I'm curious though for people affected by this: if you put the profile under UNC - do you only use that for an environment with stationary desktops and very stable network? How would (does it?) work if you have a laptop and try starting Thunderbird when away, or on flaky connection?
Laptops require LAN or VPN access. When offline, the profile-not-found message is expected.
| Assignee | ||
Comment 35•1 year ago
|
||
Comment on attachment 9487963 [details]
Bug 1966256 - Block only remote UNC mailbox access outside the profile. r=BenC
Uplift Approval Request
- Please state case for uplift consideration and ensure bug severity is set: Regression
- User impact if declined: Cannot access mail at UNC path
- Is this code covered by automated tests?: No
- Has the fix been verified in Daily?: Yes
- Has the fix been verified in Beta?: No
- Needs manual test from QA?: Yes
- If yes, steps to reproduce: Set up a profile at an UNC path (a windows share like \yoursever\foo. Access (non-imap) mail on that profile.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): If it's hitting this code, it would be broken anyway.
- String changes made/needed: none
Comment 36•1 year ago
|
||
Comment on attachment 9487963 [details]
Bug 1966256 - Block only remote UNC mailbox access outside the profile. r=BenC
[Triage Comment]
Approved for beta
Approved for release
Approved for esr128
Comment 37•1 year ago
|
||
| bugherder uplift | ||
Thunderbird 139.0b4:
https://hg.mozilla.org/releases/comm-beta/rev/adbe3988a04e
Comment 38•1 year ago
|
||
| bugherder uplift | ||
Thunderbird 138.0.2:
https://hg.mozilla.org/releases/comm-release/rev/2c197311b7a2
Comment 41•1 year ago
|
||
| bugherder uplift | ||
Thunderbird 128.10.2esr:
https://hg.mozilla.org/releases/comm-esr128/rev/6443e920c1d2
Comment 42•1 year ago
|
||
Robert, would you be able to give 139.0b4 a quick test? It is currently available from:
https://ftp.mozilla.org/pub/thunderbird/candidates/139.0b4-candidates/build1/
Comment 43•1 year ago
•
|
||
128.10.2esr is failing to find MsgLogToConsole4: https://treeherder.mozilla.org/logviewer?job_id=509123195&repo=comm-esr128&lineNumber=14460
I think we need to adjust the 2nd parameter on the call to MsgLogToConsole4 since we don't have bug 1911352 in 128
I'm going to switch the 2nd parameter to NS_LITERAL_STRING_FROM_CSTRING(__FILE__)
| Reporter | ||
Comment 44•1 year ago
|
||
v139.0b4 installed.
- Inbox default view has changed to "Cards". Changing back works.
- Two profiles, one for mapped drive path, one for UNC path, both working when switching the default profile and restarting TB.
- v138.0.1 stays installed and reports the profile has been modified by a newer version.
A likely unrelated issue: When I shuffled the paths around to make it easier to create a mapped drive letter, I learned in v138.0.1 it is impossible to use a root path in the profile settings. In other words, if I try to create a profile at Z:\ the "Select Folder" button closes the Choose Profile Folder dialog but has no other effect. It feels like there is missing feedback here. The workaround is to map the drive letter such that the profile root is not the same as the mapped drive root.
Comment 45•1 year ago
•
|
||
| backout bugherder uplift | ||
Thunderbird 128.10.2esr (back out):
https://hg.mozilla.org/releases/comm-esr128/rev/eb878903484a
Comment 46•1 year ago
•
|
||
| bugherder uplift | ||
Thunderbird 128.10.2esr:
https://hg.mozilla.org/releases/comm-esr128/rev/7837c914bfaf
(with NS_LITERAL_STRING_FROM_CSTRING(__FILE__) change)
Comment 47•1 year ago
|
||
Torsten, superjet,
Can you also test the download at https://ftp.mozilla.org/pub/thunderbird/candidates/139.0b4-candidates/build1/win64/en-US/Thunderbird%20Setup%20139.0b4.exe ?
Please post your results.
Comment 48•1 year ago
|
||
(In reply to Magnus Melin [:mkmelin] from comment #30)
I'm curious though for people affected by this: if you put the profile under UNC - do you only use that for an environment with stationary desktops and very stable network? How would (does it?) work if you have a laptop and try starting Thunderbird when away, or on flaky connection?
RDS environment, with profiles/mail/folders etc in SAN.
Is there a download for 128.10.2esr? Apologies, looked at Corey's link above and couldn't see an executable?
Comment 49•1 year ago
|
||
γγ«γΉγγ³γγΉγΌγγΌγΈγ§γγγ
https://ftp.mozilla.org/pub/thunderbird/candidates/139.0b4-candidates/build1/win64/en-US/Thunderbird%20Setup%20139.0b4.exeγ§γγ¦γ³γγΌγγγγΉγγγγγ¨γγ§γγΎγγ?
η΅ζγζη¨Ώγγ¦γγ γγγ
We confirmed that the issue occurred in our environment when installing version 139.0b3, and that the issue was resolved after installing version 139.0b4.
Comment 50•1 year ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #47)
Torsten, superjet,
Can you also test the download at https://ftp.mozilla.org/pub/thunderbird/candidates/139.0b4-candidates/build1/win64/en-US/Thunderbird%20Setup%20139.0b4.exe ?
Please post your results.
Thanks for the test build.
Iβve installed and tested version 139.0b4 β the issue with opening EML files from NAS is resolved.
Appreciate your support!
Comment 51•1 year ago
|
||
(In reply to ACIT from comment #48)
RDS environment, with profiles/mail/folders etc in SAN.
Is there a download for 128.10.2esr? Apologies, looked at Corey's link above and couldn't see an executable?
| Assignee | ||
Updated•1 year ago
|
Comment 54•1 year ago
|
||
We have fixes available in 138.0.2 and 128.10.2esr candidates if anyone wants to give it a test and provide feedback before we release.
https://ftp.mozilla.org/pub/thunderbird/candidates/138.0.2-candidates/build1/
https://ftp.mozilla.org/pub/thunderbird/candidates/128.10.2esr-candidates/build1/
Comment 55•1 year ago
|
||
We could particularly use a test of https://ftp.mozilla.org/pub/thunderbird/candidates/128.10.2esr-candidates/build1/ if anyone has cycles.
Comment 56•1 year ago
|
||
This has been tested successfully for 128.10.2esr. We're going to release now.
Description
•