Bug 1966256 - Block only remote UNC mailbox access outside the profile. r=BenC

Allow UNC paths, but if remote, and not under the user profile, don't. So check for dot (domain, or ipv4), ":" (ipv6) or % (somehing escaped...)
If host is listed in `mail.allowed_unc_hosts` - allow.

Differential Revision: https://phabricator.services.mozilla.com/D249538

--HG--
extra : amend_source : c0edcd8df79ca2ab426eef2f18d94e79a66a5de5